<resources>
    <string name="app_name">SASAbus</string>
    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_account_settings">Account settings</string>
    <string name="title_changelog">Changelog</string>
    <string name="title_bus_stops">Bus stops</string>
    <string name="title_pick_bus_stops">Pick a bus stop</string>
    <string name="title_map">Map</string>
    <string name="title_eco_points">Eco points</string>
    <string name="title_bus_lines">Lines</string>
    <string name="title_lines">Lines</string>
    <string name="title_route">Route</string>
    <string name="title_line_details">Line details</string>
    <string name="title_line_path">Line path</string>
    <string name="title_news">News</string>
    <string name="title_credits">Credits</string>
    <string name="title_parking">Parking</string>
    <string name="search">Search</string>
    <string name="title_course_details">Course details</string>
    <string name="title_trips">Trips</string>
    <string name="title_trip_details">Trip details</string>
    <string name="title_bus_details">Bus details</string>
    <string name="title_timetables">Timetables</string>
    <string name="title_route_results">Route results</string>
    <string name="title_survey">Survey</string>
    <string name="title_departure">Departures</string>
    <string name="action_delete">Delete</string>
    <string name="action_refresh">Refresh</string>
    <string name="merano">Merano</string>
    <string name="bolzano">Bolzano</string>
    <string name="line">Line</string>
    <string name="line_format">Line %s</string>
    <string name="additional_info">Additional information:</string>
    <string name="lines_driving">Driving Lines</string>
    <string name="lines_all">All Lines</string>
    <string name="unknown">unknown</string>
    <string name="all">All</string>
    <string name="general">General</string>
    <string name="none">None</string>
    <string name="changelog_version">Version</string>
    <string name="favorites">Favorites</string>
    <string name="search_label">Bus stops</string>
    <string name="title_search">Search</string>
    <string name="search_hint">Search bus stops</string>
    <string name="done_button">Done</string>
    <string name="save_button">Save</string>
    <string name="retry">Retry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bottom_sheet_delayed">%d\' delayed</string>
    <string name="bottom_sheet_early">%d\' ahead</string>
    <string name="bottom_sheet_punctual">Punctual</string>
    <string name="empty_state_title_font" translatable="false">sans-serif-medium</string>
    <string name="empty_state_departures_select_title">
        Pick a bus stop from the search field above.
    </string>
    <string name="empty_state_departures_no_departures_title">No departures at this time. Try it
        with another date or time, or search
        for another bus stop.
    </string>
    <string name="empty_state_bus_stop_favorites_title">No favorite bus stops</string>
    <string name="search_no_results">No results</string>
    <string name="about_changelog_title">Changelog</string>
    <string name="about_changelog_subtitle">Version</string>
    <string name="about_feedback_title" translatable="false">Feedback</string>
    <string name="about_feedback_subtitle">Send us a bug report or a suggestion</string>
    <string name="about_credits_title" translatable="false">Credits</string>
    <string name="about_credits_subtitle">Developers and libraries</string>
    <string name="about_policy_title">Privacy Policy</string>
    <string name="about_policy_subtitle">Open in browser</string>
    <string name="about_traffic_light_city">Status for %s</string>
    <string name="about_traffic_light_loading">Loading…</string>
    <string name="about_github_title">View on GitHub</string>
    <string name="about_github_subtitle">Contribute to SASAbus on GitHub</string>
    <string name="credits_developers">Developers</string>
    <string name="credits_copyright" translatable="false">Copyright</string>
    <string name="credits_copyright_sub">
        <![CDATA[© 2015–2016 David Dejori & Alex Lardschneider\nAll rights reserved. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, without the prior written permission of the publishers.]]></string>
    <string name="credits_email" translatable="false">android@sasabz.it</string>
    <string name="credits_alex_title" translatable="false">Alex Lardschneider</string>
    <string name="credits_alex_sub">App developer</string>
    <string name="credits_david_title" translatable="false">David Dejori</string>
    <string name="credits_david_sub">Server developer</string>
    <string name="credits_appcompat_title" translatable="false">AppCompat</string>
    <string name="credits_appcompat_sub" translatable="false">Google Inc.</string>
    <string name="credits_okhttp_title" translatable="false">OkHttp</string>
    <string name="credits_okhttp_sub" translatable="false">Square</string>
    <string name="credits_crashlytics_title" translatable="false">Crashlytics</string>
    <string name="credits_crashlytics_sub" translatable="false">Fabric</string>
    <string name="credits_altbeacon_title" translatable="false">Altbeacon for Android</string>
    <string name="credits_altbeacon_sub" translatable="false">Altbeacon</string>
    <string name="credits_retrofit_title" translatable="false">Retrofit</string>
    <string name="credits_retrofit_sub" translatable="false">Square</string>
    <string name="credits_license_apache" translatable="false">Apache License, Version 2.0</string>
    <string name="credits_license_title">Open source licenses</string>
    <string name="departures_loading">Loading…</string>
    <string name="departures_no_data">No data available</string>
    <string name="departure_search_text">Search bus stop</string>
    <string name="settings_general">Language</string>
    <string name="settings_data">Data and Internet</string>
    <string name="settings_advanced">Identification</string>
    <string name="preferences_menu_appearance_title">Language</string>
    <string name="preferences_menu_map_title">Map</string>
    <string name="preferences_menu_advanced_title">Advanced</string>
    <string name="preferences_menu_beacons_title" translatable="false">Beacons</string>
    <string name="preferences_menu_notifications_title">Notifications</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_sub">Change language</string>
    <string name="settings_map_refresh">Marker refresh</string>
    <string name="settings_map_auto_title">Auto refresh</string>
    <string name="settings_map_auto_sub">Automatically refresh bus positions on map</string>
    <string name="settings_map_auto_interval_title">Update interval</string>
    <string name="settings_map_auto_interval_sub">Change marker update interval</string>
    <string name="settings_beacons_enable_title">Enable beacons</string>
    <string name="settings_beacons_enable_sub">Get information about buses and bus stops</string>
    <string name="settings_beacons_bus_enabled_title">Buses</string>
    <string name="settings_beacons_bus_enabled_sub">Notifications of nearby buses</string>
    <string name="settings_beacons_station_enabled_title">Bus stops</string>
    <string name="settings_beacons_station_enabled_sub">Notifications of nearby bus stops</string>
    <string name="settings_beacons_station_vibration_sub">Vibrate when a bus stop is nearby</string>
    <string name="settings_trips_enabled_title">Trips</string>
    <string name="settings_trips_enabled_sub">Notifications of completed trips</string>
    <string name="settings_fetch_images_title">Download bus stop photos</string>
    <string name="settings_fetch_images_sub">Select when to download photos</string>
    <string name="settings_station_ids_title">Display the numerical ID of a bus stop</string>
    <string name="settings_station_ids_sub">Show bus stop IDs</string>
    <string name="settings_news_push_sub">Notifications of timetable changes</string>
    <string name="settings_notifications_vibrations">Vibration</string>
    <string name="settings_survey_category">Surveys</string>
    <string name="settings_survey_enable_title">Enable surveys</string>
    <string name="settings_survey_enable_summary">You will get a notification when completing a
        trip. You then can give feedback and vote the service.
    </string>
    <string name="settings_survey_interval_title">Survey interval</string>
    <string name="settings_survey_interval_summary">The survey will appear only once during the
        selected interval.
    </string>
    <string name="route_departure">Departure</string>
    <string name="route_arrival">Arrival</string>
    <string name="route_recent">Recent searches</string>
    <string name="route_result_default">5 results</string>
    <string name="route_walk_default">5’ walk</string>
    <string name="station_details">Bus stop details</string>
    <string name="station_select">Select</string>
    <string name="station_no_lines">No lines</string>
    <string name="station_tab_list">List</string>
    <string name="station_menu_cancel">Cancel</string>
    <string name="station_menu_line">Line</string>
    <string name="station_menu_course">Route</string>
    <string name="station_nearby_text">Nearby bus stops</string>
    <string name="station_heading">Heading to %s</string>
    <string name="list_lines_station">Bus stop</string>
    <string name="list_lines_delay">Delay</string>
    <string name="line_current_stop">Now at %s</string>
    <string name="line_heading">Heading to %s</string>
    <string name="bus_not_in_service_short">Not in service</string>
    <string name="bus_depot">Depot</string>
    <string name="hydrogen_buses">H₂ buses</string>
    <string name="bus_specifications">Specifications</string>
    <string name="bus_report">Report a problem in this bus</string>
    <string name="map_snackbar_update">Update</string>
    <string name="map_snackbar_view">View</string>
    <string name="bus_details_not_available">Not available</string>
    <string name="bus_details_manufacturer">Manufacturer</string>
    <string name="bus_details_model">Model</string>
    <string name="bus_detail_id" translatable="false">ID</string>
    <string name="bus_details_fuel">Fuel</string>
    <string name="bus_details_color">Color</string>
    <string name="trip_details_from">From</string>
    <string name="trip_details_to">To</string>
    <string name="trip_details_distance">Distance</string>
    <string name="trip_details_error">Could not load data</string>
    <string name="trip_details_duration">Duration</string>
    <string name="trip_details_line">Line</string>
    <string name="trip_details_co2_emission">Your CO₂ emission using the bus</string>
    <string name="survey_title_header">Surveys help us to improve our bus service by analysing
        opinions and complains by our customers. Please tell us how you perceived this bus ride or
        how we can improve our service. Thanks.
    </string>
    <string name="survey_title_rate">How would you rate your experience on the bus?</string>
    <string name="survey_title_form">Please provide your email address so we can contact you.
    </string>
    <string name="survey_form_submit">Submit</string>
    <string name="survey_form_feedback">Feedback (optional)</string>
    <string name="dialog_report_email">Your email</string>
    <string name="dialog_change_password_old">Old password</string>
    <string name="dialog_change_password_new_1">New password</string>
    <string name="dialog_change_password_new_2">Repeat new password</string>
</resources>