<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016 David Dejori, Alex Lardschneider
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/settings_data">

        <ListPreference
            android:key="pref_fetch_images"
            android:title="@string/settings_fetch_images_title"
            android:summary="@string/settings_fetch_images_sub"
            android:entries="@array/settings_fetch_images_readable"
            android:entryValues="@array/settings_fetch_images_values"
            android:defaultValue="2"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_advanced">

        <SwitchPreference
            android:key="pref_show_station_ids"
            android:summary="@string/settings_station_ids_title"
            android:title="@string/settings_station_ids_sub"
            android:defaultValue="false"/>

    </PreferenceCategory>

</PreferenceScreen>
