<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016 David Dejori, Alex Lardschneider
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory android:title="@string/settings_map_refresh">

        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_auto_update"
            android:summary="@string/settings_map_auto_sub"
            android:title="@string/settings_map_auto_title"/>

        <ListPreference
            android:defaultValue="5000"
            android:dependency="pref_auto_update"
            android:entries="@array/settings_map_interval_readable"
            android:entryValues="@array/settings_map_interval_values"
            android:key="pref_auto_update_interval"
            android:summary="@string/settings_map_auto_interval_sub"
            android:title="@string/settings_map_auto_interval_title"/>

    </PreferenceCategory>

</PreferenceScreen>
