<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016 David Dejori, Alex Lardschneider
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <PreferenceCategory android:title="@string/preferences_menu_beacons_title">

        <SwitchPreference
            android:key="pref_beacons_enabled"
            android:title="@string/settings_beacons_enable_title"
            android:summary="@string/settings_beacons_enable_sub"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>
