<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2016 David Dejori, Alex Lardschneider
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_change_password_old_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:textColorHint="@color/black_400"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayout.Hint">

            <EditText
                android:id="@+id/dialog_change_password_old"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_change_password_old"
                android:inputType="textPassword"
                android:textColor="@color/text_default"
                android:textColorHint="@color/black_400"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_change_password_new_1_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/black_400"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayout.Hint">

            <EditText
                android:id="@+id/dialog_change_password_new_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_change_password_new_1"
                android:inputType="textPassword"
                android:textColor="@color/text_default"
                android:textColorHint="@color/black_400"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dialog_change_password_new_2_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/black_400"
            android:theme="@style/TextInputLayout"
            app:hintTextAppearance="@style/TextInputLayout.Hint">

            <EditText
                android:id="@+id/dialog_change_password_new_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/dialog_change_password_new_2"
                android:textColor="@color/text_default"
                android:textColorHint="@color/black_400"
                android:textSize="14sp"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</ScrollView>